--- a/themes/minimal-project/layouts/partials/main.html
+++ b/themes/minimal-project/layouts/partials/main.html
@@ -21,4 +21,10 @@ h6 {
     font-weight: 500;
 }
 
+@media only screen and (max-width: 600px) {
+    .toc {
+        display: none;
+    }
+}
+
 </style>
