--- a/themes/minimal-project/layouts/index.html
+++ b/themes/minimal-project/layouts/index.html
@@ -1,3 +1,4 @@
+{{ partial "google_analytics.html" . }}
 {{ partial "head.html" . }}
 {{ partial "header.html" . }}
 {{ partial "social_sharing.html" . }}
