--- a/themes/minimal-project/layouts/partials/google_analytics.html
+++ b/themes/minimal-project/layouts/partials/google_analytics.html
@@ -1,6 +1,6 @@
 {{ $ga := .Site.Params.googleAnalytics.id | default .Site.GoogleAnalytics | default "" }}
 
-{{ if (in (slice (getenv "HUGO_ENV") hugo.Environment) "production") | and $ga | and (not $gtm) }}
+{{ if (in (slice (getenv "HUGO_ENV") hugo.Environment) "production") | and $ga }}
 
 {{ $gtag_config := cond .Site.Params.anonymizeIP "{ 'anonymize_ip': true }" "{}" }}
 <script async src="https://www.googletagmanager.com/gtag/js?id={{$ga}}"></script>
