Added GA in header; Removed GA in partials

--- a/themes/minimal-project/layouts/partials/head.html
+++ b/themes/minimal-project/layouts/partials/head.html
@@ -45,6 +45,17 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{ .Site.Params.googleAnalytics.id }}"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', '{{ .Site.Params.googleAnalytics.id }}');
+    </script>
+
+
     <!-- Add kaTeX -->
       {{ if or .Params.math .Site.Params.math }}
         {{ partial "math.html" . }}
