--- a/css/project.css
+++ b/css/project.css
@@ -139,3 +139,7 @@ div.col-md-8 h2{
     border-bottom: solid darkgray;
     border-width: 2px;
 }
+
+a code {
+  text-decoration-line: underline;
+}
