--- a/themes/minimal-project/layouts/partials/template.css
+++ b/themes/minimal-project/layouts/partials/template.css
@@ -1,6 +1,6 @@
 body {
   color: {{ .Site.Params.header_text_color }};
-  /*font-family: 'Frank Ruhl Libre', serif;*/
+  font-family: 'PT Serif', serif;
 }
 
 h1,
@@ -9,7 +9,7 @@ h3,
 h4, 
 h5, 
 h6 {
-	font-family: 'Frank Ruhl Libre', serif;
+	font-family: 'PT Serif', serif;
 }
 
 .header-container h1,
