--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,11 +2,11 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-md-8" style="padding-left: 0px; width:100%">
+            <div class="col-md-12" style="padding-left: 0px; padding-top: 15px; width:100%">
                 <ul class="list-inline">
-                    <li>
+                   <!--  <li>
                         <a class="page-scroll" href="#intro">Up</a>
-                    </li>
+                    </li> -->
                     {{ if (fileExists "imprint-gdpr/imprint.md") -}}
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
@@ -20,10 +20,14 @@
                         </li>
                     {{- end }}
                  </ul>
-                 <p class="copyright text-muted small" style="text-align:left;">
-                    Copyright &copy; {{ .Site.Title }} All Rights Reserved 
-                        </br>Built with <a href="http://gohugo.io">Hugo</a> and the <a href="https://github.com/sowmyamanojna/hugo-minimal-project">Minimal Project</a> theme.
-                 </p>
+                 <center>
+                    <br>
+                    <br>
+                    <p class="copyright text-muted small" style="text-align:center;">
+                        Copyright &copy; {{ .Site.Title }} All Rights Reserved 
+                        </br>Built with <a href="http://gohugo.io">Hugo</a> and the <a href="https://github.com/sowmyamanojna/hugo-minimal-project">Minimal Project</a> theme. 
+                    </p>
+                 </center>
             </div>
         </div>
     </div>
