--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -4,7 +4,7 @@
 <li>
     <a href="{{ .Site.Params.proposal_file }}" target="_blank" rel="noopener">
         <image src="{{ .Site.Params.proposal_image }}" height="60px"><br>
-            Proposal
+            Project Proposal
     </a>
 </li>
 {{end}}
@@ -13,7 +13,7 @@
 <li>
     <a href="{{ .Site.Params.midterm_file }}" target="_blank" rel="noopener">
         <image src="{{ .Site.Params.midterm_image }}" height="60px"><br>
-            Midterm
+            Midterm Report
     </a>
 </li>
 {{end}}
@@ -22,7 +22,7 @@
 <li>
     <a href="{{ .Site.Params.final_file }}" target="_blank" rel="noopener">
         <image src="{{ .Site.Params.final_image }}" height="60px"><br>
-            Final
+            Final Report
     </a>
 </li>
 {{end}}
