--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,10 +2,10 @@
 	<!-- Header -->
 	<div class="container">
 		<div class="row">
-			<h2 class="col-md-12 text-center intro">
+			<h2 class="col-md-8 col-md-offset-2 text-center intro">
 				{{ .Site.Title }}
 			</h2>
-			<h3 class="col-md-12 text-center intro">
+			<h3 class="col-md-8 col-md-offset-2 text-center intro">
 				{{ .Site.Params.course_code_session }}
 			</h3>
 
